--- a/contrib/snap/snapcraft.yaml
+++ b/contrib/snap/snapcraft.yaml
@@ -1,31 +1,31 @@
-name: masari
+name: hakcoin
 version: 0.1.5.0
-summary: "Masari: the secure, private, untraceable cryptocurrency https://getmasari.org"
+summary: "Hakcoin: the secure, private, untraceable cryptocurrency https://hakcoin.org"
 description: |
-    Masari is a private, secure, untraceable, decentralised digital currency.
+    Hakcoin is a private, secure, untraceable, decentralised digital currency.
     You are your bank, you control your funds, and nobody can trace your transfers
     unless you allow them to do so.
 grade: devel
 confinement: strict
 
 apps:
-    masarid:
+    hakcoind:
         daemon: forking
         command: |
-          masarid-wrapper --detach --data-dir ${SNAP_COMMON} --config-file ${SNAP_USER_DATA}/etc/masarid.conf
+          hakcoind-wrapper --detach --data-dir ${SNAP_COMMON} --config-file ${SNAP_USER_DATA}/etc/hakcoind.conf
         plugs:
             - network
             - network-bind
-    masari-wallet-rpc:
+    hakcoin-wallet-rpc:
         command: |
-          masari-wallet-rpc --log-file ${SNAP_USER_DATA}
+          hakcoin-wallet-rpc --log-file ${SNAP_USER_DATA}
         plugs:
             - home
             - network
             - network-bind
-    masari-wallet-cli:
+    hakcoin-wallet-cli:
         command: |
-          masari-wallet-cli --log-file ${SNAP_USER_DATA}
+          hakcoin-wallet-cli --log-file ${SNAP_USER_DATA}
         plugs:
             - home
             - network
@@ -72,8 +72,8 @@ parts:
         plugin: dump
         source: .
         organize:
-            contrib/snap/masarid.conf: etc/masarid.conf
-            contrib/snap/masarid-wrapper: bin/masarid-wrapper
+            contrib/snap/hakcoind.conf: etc/hakcoind.conf
+            contrib/snap/hakcoind-wrapper: bin/hakcoind-wrapper
         prime:
             - etc
             - bin
